# SPDX-FileCopyrightText: 2023 Daniel Schaefer for FrameworkComputer
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-is31fl3743"
description = "CircuitPython library for IS31FL3743 RGB LED matrices."
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Daniel Schaefer", email = "dhs@frame.work"}
]
urls = {Homepage = "https://github.com/FrameworkComputer/CircuitPython_IS31FL3743"}
keywords = [
    "adafruit",
    "is31fl3743",
    "led",
    "matrix",
    "charlieplex",
    "featherwingbreakout",
    "hardware",
    "micropython",
    "circuitpython",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["framework_is31fl3743"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
